# chrome-dumper

./: .gitignore  AGENTS.md  Makefile  README.md
.claude/agents/: chrome-dumper.md
agents/: chrome-dumper.md
client/: README.md  pyproject.toml
client/src/chrome_dumper_client/: __init__.py  __main__.py  client.py  debug.py  messaging.py
extension/: background.js  debugger.js  manifest.json  popup.html  popup.js
extension/plugins/: README.md  loader.js
extension/plugins/messaging/: commands.js  plugin.json
extension/plugins/pipeline/: commands.js  plugin.json
firefox-extension/: background.js  debugger.js  manifest.json  popup.html
server/: README.md  pyproject.toml
server/src/chrome_dumper_server/: __init__.py  server.py
