[project]
name = "chrome-dumper-server"
version = "0.1.0"
description = "WebSocket bridge between the HTML Dumper Chrome extension and a local HTTP control API."
requires-python = ">=3.11"
dependencies = [
    "websockets>=12",
    "aiohttp>=3.9",
    "pillow>=10",
]

[project.scripts]
chrome-dumper-server = "chrome_dumper_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chrome_dumper_server"]
